--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon index.js"
-
+    "start": "src/index.js"
   },
   "repository": {
     "type": "git",
@@ -24,5 +23,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "express-handlebars": "^5.2.1"
   }
 }
