--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "src/index.js"
+    "start": "nodemon src/index.js",
+    "watch":"node-sass --watch src/resources/scss/ --output src/public/css/"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "nodemon": "^2.0.7"
   },
   "devDependencies": {
-    "express-handlebars": "^5.2.1"
+    "express-handlebars": "^5.2.1",
+    "node-sass": "^5.0.0"
   }
 }
